{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 30,
  "lineage": "e6311279-d20c-6d1f-aa4a-c2e8619c3705",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c215fed75e4fa46",
            "arn": "arn:aws:ec2:us-east-2:052776272001:instance/i-0737e0c1fecdb41c4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0737e0c1fecdb41c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-012520559e565c79f",
            "private_dns": "ip-192-168-4-41.us-east-2.compute.internal",
            "private_ip": "192.168.4.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 105,
                "throughput": 0,
                "volume_id": "vol-0352ecdb4072c5651",
                "volume_size": 35,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e7aebd0d7ff0abd",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0670f30908ab5a3d3"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:internet-gateway/igw-014f2f729e5d61ded",
            "id": "igw-014f2f729e5d61ded",
            "owner_id": "052776272001",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW ",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW ",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/Terraform-ALB/33783c9d59f4b38e",
            "arn_suffix": "app/Terraform-ALB/33783c9d59f4b38e",
            "dns_name": "Terraform-ALB-1496931731.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/Terraform-ALB/33783c9d59f4b38e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-ALB",
            "security_groups": [
              "sg-01e2d0d0ef08f85cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025718ae7162eb8c5"
              },
              {
                "subnet_id": "subnet-0a680c26af4edc9ca"
              }
            ],
            "subnets": [
              "subnet-025718ae7162eb8c5",
              "subnet-0a680c26af4edc9ca"
            ],
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform ALB",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform ALB",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04090ee7dcb915f9f",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/Terraform-ALB/33783c9d59f4b38e/031adfa88425a26b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/ALB-TG/0620d5f4469a836a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:listener/app/Terraform-ALB/33783c9d59f4b38e/031adfa88425a26b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:loadbalancer/app/Terraform-ALB/33783c9d59f4b38e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/ALB-TG/0620d5f4469a836a",
            "arn_suffix": "targetgroup/ALB-TG/0620d5f4469a836a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:052776272001:targetgroup/ALB-TG/0620d5f4469a836a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-03f6ae3bce12d0db8",
            "id": "rtb-03f6ae3bce12d0db8",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-023e7ab16fd646954",
            "id": "rtb-023e7ab16fd646954",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014f2f729e5d61ded",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028fd64c395e70ef7",
            "route_table_id": "rtb-03f6ae3bce12d0db8",
            "subnet_id": "subnet-04ddbbb1124c81bb5"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Private B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7e84804c8d72233",
            "route_table_id": "rtb-03f6ae3bce12d0db8",
            "subnet_id": "subnet-03e7aebd0d7ff0abd"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072de44bb72b7a063",
            "route_table_id": "rtb-023e7ab16fd646954",
            "subnet_id": "subnet-0a680c26af4edc9ca"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03309239fb31d4757",
            "route_table_id": "rtb-023e7ab16fd646954",
            "subnet_id": "subnet-025718ae7162eb8c5"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-01e2d0d0ef08f85cf",
            "description": "Load Balancer SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e2d0d0ef08f85cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-006cf9ae9f79e1867",
            "description": "Security group that allows ssh/http and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006cf9ae9f79e1867",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e2d0d0ef08f85cf"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling",
            "name_prefix": "",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0bb467edf327caf40",
            "description": "Allow incoming database connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0bb467edf327caf40",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0889c6495835827ca"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB",
            "name_prefix": "",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Database MySQL",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Database MySQL",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0670f30908ab5a3d3",
            "description": "Allow incoming connections to Jenkins machine",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0889c6495835827ca"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0670f30908ab5a3d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jenkins",
            "name_prefix": "",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Jenkins Machine",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-0889c6495835827ca",
            "description": "Allow public inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "192.168.3.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0889c6495835827ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web",
            "name_prefix": "",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0a680c26af4edc9ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0a680c26af4edc9ca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-025718ae7162eb8c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-025718ae7162eb8c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-04ddbbb1124c81bb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-04ddbbb1124c81bb5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-03e7aebd0d7ff0abd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-03e7aebd0d7ff0abd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-04090ee7dcb915f9f"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:vpc/vpc-04090ee7dcb915f9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09cc49c6c087f80b2",
            "default_route_table_id": "rtb-02ca7ef4a9a84c7ae",
            "default_security_group_id": "sg-07fb97f9f3917df48",
            "dhcp_options_id": "dopt-5513733e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04090ee7dcb915f9f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02ca7ef4a9a84c7ae",
            "owner_id": "052776272001",
            "tags": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC ",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2020-03-17",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC ",
              "Owner": "Cleber Gasparoto",
              "Project": "Curso AWS com Terraform",
              "Service": "Auto Scaling App"
            }
          }
        }
      ]
    }
  ]
}